demobuilder/deployment/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demobuilder
  namespace: demobuilder
  labels:
    app: demobuilder
    component: web-service
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: demobuilder-tls
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    deployment: demobuilder
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 300
